sections: Header, FourSteps, ThreeColumns

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,3 +3,7 @@
 @import "settings/fonts";
 @import "settings/colors";
 @import "elements/base";
+
+@import "sections/homeThreeColumns";
+@import "sections/homeFourSteps";
+@import "sections/homeHeader";
