--- a/src/scss/sections/_homeHeader.scss
+++ b/src/scss/sections/_homeHeader.scss
@@ -3,12 +3,20 @@
   justify-content: space-around;
 
   &__img {
+    background-image: url("../../assets/Home-Hero-Image.jpg");
+    background-position: right;
+    overflow: hidden;
+    background-size: 150% 100%;
+    background-repeat: no-repeat;
     width: 50vw;
+    height: 96.3rem;
   }
 
   &__text {
     display: flex;
     flex-direction: column;
+    margin-right: 20rem;
+    padding-left: 6.6rem;
   }
 
   &__links {
@@ -37,9 +45,20 @@
     gap: 5.5rem;
 
     &--link {
+      text-decoration: none;
+      color: $colorFont;
       font-size: 1.8rem;
       line-height: 2.4rem;
+      cursor: pointer;
+      padding: 0.9rem 2rem;
+
+      &:active {
+        border: 0.75px solid $colorFont;
+
+      }
     }
+
+
   }
 
   &__titles {
@@ -48,13 +67,13 @@
     flex-direction: column;
     justify-content: center;
     align-self: center;
-    font-size: 3.8rem;
     line-height: 5.5rem;
     margin-bottom: 2.5rem;
   }
 
   &__title {
     text-align: center;
+    font-size: 3.8rem;
   }
 
   &__btns {
