--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,3 +10,4 @@
 @import "sections/homeHeader";
 @import "sections/homeAboutUs";
 @import "sections/homeContact";
+@import "sections/homeWhoWeHelp";
