sections: Login, Registration, LoggingOut

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,4 +11,4 @@
 @import "sections/homeAboutUs";
 @import "sections/homeContact";
 @import "sections/homeWhoWeHelp";
-@import "sections/login";
+@import "sections/panel";
