--- a/src/scss/sections/_homeWhoWeHelp.scss
+++ b/src/scss/sections/_homeWhoWeHelp.scss
@@ -25,6 +25,7 @@
     text-decoration: none;
     color: $colorFont;
     padding: 1.1rem 5rem;
+    cursor: pointer;
 
     &:first-child {
       padding: 2.2rem 4.2rem;
