--- a/src/scss/sections/_homeContact.scss
+++ b/src/scss/sections/_homeContact.scss
@@ -65,7 +65,6 @@
   &__input {
     border: none;
     border-bottom: 1px solid #707070;
-    color: #3C3C3C26;
     width: 25.6rem;
     font-size: 1.8rem;
   }
@@ -73,7 +72,6 @@
   &__textarea {
     border: none;
     border-bottom: 1px solid #707070;
-    color:#3C3C3C26;
     width: 52.8rem;
     height: 14rem;
     font-size: 1.8rem;
@@ -96,7 +94,7 @@
     padding-top: 1.5rem;
     color: red;
     font-weight: 600;
-    border-top: 2px solid red;
+    //border-top: 2px solid red;
   }
 
   &__footer {
