--- a/src/scss/sections/_panel.scss
+++ b/src/scss/sections/_panel.scss
@@ -1,4 +1,4 @@
-.login {
+.panel {
   margin-top: 12rem;
   display: flex;
   flex-direction: column;
@@ -44,6 +44,8 @@
 
   &__account {
     text-decoration: none;
+    color: #000000;
+    cursor: pointer;
   }
 
   &__btn {
@@ -53,5 +55,38 @@
     border: 0.75px solid $colorFont;
     color: $colorFont;
     font-weight: 300;
+    cursor: pointer;
+  }
+
+  &__login {
+    text-decoration: none;
+    color: #000000;
+    cursor: pointer;
+  }
+}
+
+.loggingOut {
+  margin-top: 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+
+  &__title {
+    font-size: 4rem;
+    line-height: 5.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  &__btn {
+    margin-top: 3.5rem;
+    background-color: white;
+    padding: 1.3rem 1.7rem;
+    border: 0.75px solid $colorFont;
+    color: #000000;
+    font-weight: 300;
+    font-family: $font-base;
+    font-size: 1.8rem;
   }
 }
