--- a/src/scss/sections/_form.scss
+++ b/src/scss/sections/_form.scss
@@ -181,6 +181,10 @@
   &__select {
     width: 30rem;
     height: 2.6rem;
+    background: none;
+    border: 0.75px solid $colorFont;
+    font-size: 1.8rem;
+    font-family: $font-base;
   }
 
   &__holder {
@@ -194,6 +198,7 @@
     font-weight: 300;
   }
 }
+
 //Step3
 .step3 {
   &__title {
@@ -207,19 +212,22 @@
     width: 57rem;
     height: 4rem;
     border: 0.75px solid $colorFont;
+    font-size: 2rem;
+    font-family: $font-base;
     background: none;
+  }
+
+  &__options {
+    list-style-type: none;
+    list-style-position: outside;
+    float: left;
+    padding: 2.4rem 2.4rem 2.4rem 0;
   }
 }
 ul {
   padding: 0;
   margin: 0;
   clear: both;
-}
-
-li{
-  list-style-type: none;
-  list-style-position: outside;
-  float: left;
 }
 
 input[type="checkbox"]:not(:checked),
@@ -236,11 +244,20 @@ input[type="checkbox"] + label {
   color: #000000;
   font-size: 2.4rem;
   font-weight: 300;
-  margin-bottom: 2.4rem;
 }
 
 input[type="checkbox"]:checked + label {
   background-color: $colorNotification;
+}
+
+.form {
+  &__error {
+    font-size: 2rem;
+    font-weight: 800;
+    color: red;
+    margin: 2rem;
+  }
+
 }
 
 //Step4
@@ -283,19 +300,22 @@ input[type="checkbox"]:checked + label {
     height: 4rem;
     background: none;
     border: 0.75px solid $colorFont;
+    font-size: 2rem;
+    font-family: $font-base;
 
     &--notes {
       width: 25.6rem;
       height: 12rem;
       background: none;
       border: 0.75px solid $colorFont;
+      font-size: 2rem;
+      font-family: $font-base;
     }
   }
 }
 
 //Summary
 .summary {
-
   &__subtitles {
     margin-top: 7rem;
   }
