--- a/src/scss/sections/_homeWhoWeHelp.scss
+++ b/src/scss/sections/_homeWhoWeHelp.scss
@@ -23,6 +23,7 @@
 
   &__link {
     text-decoration: none;
+    background: none;
     color: $colorFont;
     padding: 1.1rem 5rem;
     cursor: pointer;
